versioned_docs/version-0.10/cloud/credentials.mdx
---
title: Download your Kubernetes credentials
description: Download your Kubernetes credentials and start developing your applications in Okteto Cloud
sidebar_label: Kubernetes Credentials
id: credentials
---

import Image from '@theme/Image';
import Button from '@theme/Button';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Download your Kubernetes credentials and start developing your applications in Okteto Cloud with your favorite CLI tools.
There are two different ways of downloading your Kubernetes credentials:

- Download your Kubernetes credentials [using the Okteto CLI](#download-your-kubernetes-credentials-using-the-okteto-cli).

- Download your Kubernetes credentials [from the Okteto Cloud UI](#download-your-kubernetes-credentials-from-the-okteto-cloud-ui).

## Download your Kubernetes credentials using the Okteto CLI

If this is your first time using the Okteto CLI, install it following [this guide](/docs/0.10/cloud/okteto-cli/).

The Okteto CLI can download your Kubernetes credentials from Okteto Cloud. To do this, run the `okteto context` command:

```console
$ okteto context use https://cloud.okteto.com
```

```console
Authentication will continue in your default browser
 ✓  Context 'cloud.okteto.com' created
```

If you're not logged into Okteto Cloud yet, it will also run the login sequence.

Once your okteto context is configured to access Okteto Cloud, run the following command:

```console
$ okteto kubeconfig
```

```console
Updated kubernetes context 'cloud_okteto_com/cindy' in '/Users/cindy/.kube/config'
```

The `okteto kubeconfig` command adds your Kubernetes credentials to your kubeconfig file, and sets it as the current Kubernetes context.
Once you do this, you'll have full access to your Kubernetes namespace with `kubectl`, `helm` or any other CLI tool.

## Download your Kubernetes credentials from the Okteto Cloud UI

Download your Kubernetes credentials and save them in a well-known location:

<p text-align="center" style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
  <Button external to="https://cloud.okteto.com/#/settings/setup/download-credentials">
    Download Config File
  </Button>
</p>

From the Okteto Cloud UI you should also find your credentials in the `Settings > Setup` section.

Once downloaded, point your `KUBECONFIG` environment variable to the credentials file:

<Tabs
  defaultValue="mac-linux"
  values={[
    { label: 'MacOS / Linux', value: 'mac-linux', },
    { label: 'Windows', value: 'windows', },
  ]}
>
<TabItem value="mac-linux">

```console
$ export KUBECONFIG=$HOME/Downloads/okteto-kube.config:${KUBECONFIG:-$HOME/.kube/config}
```

</TabItem>

<TabItem value="windows">

```console
> $Env:KUBECONFIG=("$HOME\Downloads\okteto-kube.config;$Env:KUBECONFIG;$HOME\.kube\config")
```

</TabItem>

</Tabs>

To see that the new configuration is working, enter this command:

```console
$ kubectl get all
```
```console
No resources found.
```

## Using your Kubernetes credentials

Once you've downloaded your credentials, you'll have full access to your Kubernetes namespaces on Okteto Cloud directly from your terminal, using the tools you're already familiar with, such as `helm`, `kubectl`, `okteto` or `skaffold`.

For example, you could use `kubectl` to deploy our `hello-world` application:

```terminal
kubectl apply -f https://raw.githubusercontent.com/okteto/go-getting-started/master/k8s.yml
```

[Okteto Cloud](/docs/0.10/cloud) is a multi-tenant environment. A combination of RBAC, pod security policies, resource quotas, network policies, admission controllers, and custom code are put in place to ensure that Okteto Cloud namespaces are isolated, secure, and easy to use for everyone.
Take a look at the [FAQs](/docs/0.10/reference/faqs) to understand the limitations and restrictions most likely to affect your applications in Okteto Cloud.
